# RecSys-MLops

./: .coverage  .dockerignore  .gcloudignore  .gitignore  DOCS.md  Jenkinsfile  Makefile  README.md  main.py  pyproject.toml  train.py
apps/data-platform/: Dockerfile.dataflow-cli  Dockerfile.flink  Dockerfile.spark  README.md  flink-runtime-pom.xml  pyproject.toml
apps/data-platform/data-generator/: Dockerfile  README.md  pyproject.toml
apps/data-platform/data-generator/src/: __init__.py  behavior.py  challenges.py  cli.py  config.py  domain.py  pipeline.py  schemas.py  simulation.py  sink.py  validation.py
apps/data-platform/data-generator/src/drift/: __init__.py  controller.py  reporting.py
apps/data-platform/data-generator/src/offline/: __init__.py  historical_pipeline.py  payload_hash.py  problem_pipeline.py  simulation.py  stats.py
apps/data-platform/data-generator/src/scripts/: generate_historical_to_minio.py  load_realtime_to_postgres.py  replay_parquet_to_kafka.py  run_realtime_postgres_producer.py  summarize_drift_label_merge.py  summarize_generation_quality.py
apps/data-platform/data-generator/src/sinks/: __init__.py  kafka_replay_producer.py  minio_sink.py  postgres_sink.py
apps/data-platform/data-generator/src/streaming/: __init__.py  config.py  event_factory.py  metrics.py  postgres.py  problem_pipeline.py  producer.py  types.py
apps/data-platform/dbt/recsys_warehouse/: dbt_project.yml  profiles.yml
apps/data-platform/dbt/recsys_warehouse/models/: sources.yml
apps/data-platform/feature-store/: Dockerfile  pyproject.toml
apps/data-platform/feature-store/feature_repo/: entities.py  feature_store.yaml  feature_views.py  features.py  stream_feature_views.py
apps/data-platform/feature-store/feature_repo/data/: registry.db
apps/data-platform/feature-store/src/: __init__.py  apply_feast_repo.py  materialize_offline_to_online.py  validate_feature_store.py
apps/data-platform/great_expectations/: README.md
apps/data-platform/great_expectations/checkpoints/: staging_quality.yml
apps/data-platform/great_expectations/expectations/: staging_stream_behavior_events.json  staging_stream_user_sequence_features.json
apps/data-platform/src/: __init__.py
apps/data-platform/src/config/: __init__.py  storage_paths.py
apps/data-platform/src/feature_engineering/flink/: item_features_job.py  realtime_stream_job.py  time_utils.py  user_aggregate_job.py
apps/data-platform/src/feature_engineering/spark/: __init__.py  build_bst_training_table.py  build_item_features.py  build_ranking_labels.py  build_silver_tables.py  build_user_aggregate_features.py  build_user_sequence_features.py  session.py  spark_batch_entrypoint.py  spark_realtime_bronze_entrypoint.py
apps/data-platform/src/feature_store/: __init__.py  feast_registry.py  offline_to_online_sync.py  offline_writer.py  online_writer.py  postgres_offline_store.py
apps/data-platform/src/features/flink/: __init__.py  candidate_pool_job.py  event_time.py  feature_windows.py  iceberg_feature_sink.py  item_features_job.py  pyflink_compat.py  quality_windows.py  rate_limit.py  realtime_stream_job.py  runtime.py  runtime_config.py  source.py  stream_config.py  user_aggregate_job.py  user_sequence_job.py
apps/data-platform/src/features/spark/: build_bst_training_table.py  build_item_features.py  build_silver_tables.py  build_user_aggregate_features.py  build_user_sequence_features.py  dp2_silver_gold_entrypoint.py  session.py  spark_batch_entrypoint.py
apps/data-platform/src/ingest/: batch_lakehouse_ingestion.py  bronze_cdc_reader.py  debezium.py  init_data_platform_minio.py  kafka_raw_reader.py  register_k8s_connectors.py
apps/data-platform/src/lakehouse/: __init__.py  iceberg.py  optimize.py
apps/data-platform/src/local/: run_batch_features.py  run_full_feature_flow.py  run_offline_features_from_warehouse.py  run_streaming_features.py  smoke_pyspark_batch.py  verify_k8s_data_platform_e2e.py
apps/data-platform/src/metadata/: __init__.py  governance_catalog.py  governance_schemas.py  ingest_datahub_governance.py  runtime_lineage.py
apps/data-platform/src/mlops/: __init__.py  retrain_smoke.py  trigger_kubeflow_retrain.py
apps/data-platform/src/monitoring/: __init__.py  pushgateway.py  sql_exporter.py
apps/data-platform/src/orchestration/airflow/: __init__.py
apps/data-platform/src/preprocess/: event_dedup.py  schema_evolution.py
apps/data-platform/src/processing_jobs/: __init__.py  benchmark.py
apps/data-platform/src/validate/: __init__.py  data_quality_checks.py  evidently_feature_drift.py  feature_quality_checks.py  governance_contracts.py  great_expectations_runner.py  offline_feature_drift.py  synthetic_data_quality.py
apps/data-platform/src/warehouse/: __init__.py  connection.py  historical_loader.py  init_warehouse.py  reader.py  schemas.py  writer.py
apps/demo-web/backend/: Dockerfile  openapi.json  pyproject.toml
apps/demo-web/backend/app/: __init__.py  database.py  main.py  models.py  telemetry.py
apps/demo-web/backend/scripts/: export_openapi.py
apps/demo-web/backend/tests/: test_database.py  test_demo_api.py
apps/ml-system/: Dockerfile.spark  Dockerfile.training  pyproject.toml
apps/ml-system/src/: dataset_versioning.py  evaluate_bst.py  evaluate_ray_best_bst.py  mlflow_dataset_lineage.py  model_promotion.py  prepare_bst_training_data.py  ray_tune_train_bst.py  run_feature_engineering.py  submit_ray_job.py  train.py
apps/ml-system/src/cli/: __init__.py  evaluate_bst.py  evaluate_ray_best_bst.py  model_rollout_controller.py  prepare_bst_training_data.py  run_feature_engineering.py  submit_ray_job.py  trigger_kserve_cd.py
apps/ml-system/src/kubeflow/: __init__.py  submit_pipeline_run.py  upload_pipeline_package.py  validate_pipeline_package.py
apps/ml-system/src/lineage/: __init__.py  dataset_versioning.py
apps/ml-system/src/models/: dataset.py  model.py  trainer.py
apps/ml-system/src/registry/: __init__.py  model_promotion.py  model_registry.py
apps/ml-system/src/training/: __init__.py  ray_distributed_train_bst.py  ray_tune_train_bst.py  train.py
(+595 files in other folders)
