[project]
name = "aide1-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "kfp>=2.16.1",
    "kfp-kubernetes>=1.4.0",
    "kubernetes>=30.1.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=18.0.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.3",
    "pytest>=8.3.0",
    "scikit-learn>=1.7.2",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "fastapi>=0.138.0",
    "boto3>=1.43.36",
    "pytest-cov>=7.1.0",
    "hypothesis>=6.155.7",
    "mutmut>=3.6.0",
    "locust>=2.44.4",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "apps/api-serving/src",
    "apps/ml-system/src",
]
