[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "recsys-data-platform"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow==2.9.3",
    "apache-airflow-providers-cncf-kubernetes>=8.0.0",
    "boto3==1.35.36",
    "evidently>=0.7.0",
    "feast[redis]==0.64.0",
    "fsspec==2024.10.0",
    "kfp>=2.16.1",
    "kubernetes>=30.1.0",
    "pandas>=2.3.3",
    "pendulum>=3.0.0,<4",
    "psycopg[binary]>=3.3.4",
    "psycopg-pool>=3.3.1",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=18.0.0",
    "pyspark==3.5.8",
    "pyyaml>=6.0.3",
    "redis>=5.0.0",
    "requests>=2.32.0",
    "s3fs==2024.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]
