[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "recsys-data-generator"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "boto3==1.35.36",
    "numpy>=2.2.6",
    "psycopg[binary]>=3.3.4",
    "pyarrow>=18.0.0",
    "pydantic>=2.10.0,<3",
    "pyyaml>=6.0.3",
]

[tool.setuptools.packages.find]
where = ["src"]
